<resources>
    <string name="app_name" translatable="false">O lado negro da força</string>
    <string name="pesquisa">Enter the code to be searched</string>
    <string name="botao_Pesquisar">Search</string>
    <string name="nome">Name:</string>
    <string name="cabelo">Hair Color:</string>
    <string name="pele">Skin Color:</string>
    <string name="aniversario">Birthday:</string>
    <string name="genero">Gender:</string>
    <string name="botao_Voltar">Back</string>
    <string name="botao_Sobre">Back</string>
    <string name="ir_Sobre">About</string>
    <string name="desenvolvido">Developed by Jean Felipe</string>
</resources>
