<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".resultadoActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


   <TextView

       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       android:padding="16dp"
       android:layout_weight="0.5"
       android:text="@string/nome" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="16dp"
       android:id="@+id/tvResultado"
       android:layout_weight="0.5
"
       />


</LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">


      <TextView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_weight="0.5
"
          android:padding="16dp"
          android:text="@string/cabelo" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:id="@+id/tvCabelo"
          android:layout_weight="0.5
"
          />


   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">


      <TextView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_weight="0.5
"
          android:padding="16dp"
          android:text="@string/pele" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:id="@+id/tvPele"
          android:layout_weight="0.5
"
          />


   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">


      <TextView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_weight="0.5
"
          android:padding="16dp"
          android:text="@string/aniversario" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:id="@+id/tvAniversario"
          android:layout_weight="0.5
"
          />


   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">


      <TextView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_weight="0.5
"
          android:padding="16dp"
          android:text="@string/genero" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:layout_weight="0.5"
          android:id="@+id/tvGenero"
          />

   </LinearLayout>


   <Button
       android:id="@+id/btnVoltar"
       style="@style/buttonApp"
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_gravity="center"
       android:layout_marginTop="24dp"
       android:padding="10dp"
       android:text="@string/botao_Voltar" />

</LinearLayout>