<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pesquisa"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:id="@+id/tvEnter"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:inputType="number"
        android:id="@+id/etPesquisa"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/botao_Pesquisar"
        style="@style/buttonApp"
       android:id="@+id/btnPesquisar"
        />


    <Button
        android:id="@+id/btnSobre"
        style="@style/buttonApp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/ir_Sobre" />
</LinearLayout>